# prefect

./: .env.sample  .gitignore  .gitmodules  .yamllint.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  makefile  prefect.yaml  pyproject.toml  repair_notebook.py  requirements.txt  validate_notebook.py
.devcontainer/: devcontainer.json
.dlt/: config.toml
.github/workflows/: deploy-evidence-cron.yml  sqlfmt.yml  yamllint.yml
blocks/: gihtub.py
data/staging/: data.duckdb
databases/: __init__.py
dbt_project/: .user.yml  dbt_project.yml  profiles.yml  selectors.yml
dbt_project/models/blog/marts/: count_search_query.sql  count_search_word.sql  metrics.sql
dbt_project/models/marts/: issue_count.sql  poke_count.sql
dbt_project/models/sources/: raw_data.yml
dbt_project/projects/blog/: dbt_project.yml
dbt_project/projects/pokemon/: dbt_project.yml
dbt_project/reports/: .dockerignore  .env.sample  Dockerfile  docker-compose.yml  evidence.config.yaml  evidence.plugins.yaml  package-lock.json  package.json
dbt_project/reports/pages/: +layout.svelte  index.md
dlt_project/estat/: dataset_configs.py  estat.py
dlt_project/github/: blog_content.py
dlt_project/pokemon/: pokeapi.py
flows/: __init__.py  blog_content.py  blog_transform.py  load_estat.py
notebooks/: japanese_embedding_generator.ipynb
pyairbyte_project/: __init__.py  github.py
src/: config.py
tasks/: __init__.py  blog_content.py  load_estat.py  load_github.py  pokemon.py  transform.py
templates/: modal_job_template.json
tests/flows/: test_blog_content.py
(+34 files in other folders)
