[project]
name = "prefect-dlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = ["prefect>=3.0.3", "python-dotenv"]

[project.optional-dependencies]
dev = ["SQLAlchemy", "psycopg2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dlt_project"]
exclude = ["dbt_project", "*.pyc", "data"]
