[project]
name = "prefect-dlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "dbt-bigquery>=1.9.0",
    "dbt-core>=1.9.1",
    "dlt[bigquery,parquet]>=1.5.0",
    "duckdb>=1.1.3",
    "pandas>=2.2.3",
    "prefect[github]>=3.0.3",
    "prefect-dbt>=0.6.4",
    "prefect-gcp>=0.6.2",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["SQLAlchemy", "psycopg2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dlt_project"]
exclude = ["dbt_project", "*.pyc", "data"]

[tool.sqlfmt]
line_length = 99
check = true
exclude=["target/**/*", "dbt_packages/**/*", ".venv/**/*"]

[dependency-groups]
dev = [
    "shandy-sqlfmt[jinjafmt]>=0.24.0",
]
